--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.4.0"
+
+    ext {
+        nav_version = '2.3.0'
+        pagingVersion = '3.0.0-alpha06'
+        room_version = "2.3.0-alpha02"
+        glide_version = "4.11.0"
+        coroutines_version = "1.3.7"
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // for type safety with navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
